--- a/New folder/UnityProto3/Assembly-CSharp.csproj
+++ b/New folder/UnityProto3/Assembly-CSharp.csproj
@@ -46,6 +46,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\Helicopter1.cs" />
      <Compile Include="Assets\Scripts\Ship1.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
